@@ -1,6 +1,8 @@
 # Dependencies
 
 OPENJDK_VERSION = b80
+JDK_UPDATE_VERSION = 02
+COMBINED_VERSION = $(JDK_UPDATE_VERSION)-$(OPENJDK_VERSION)
 
 CORBA_CHANGESET = 2a00aeeb466b
 JAXP_CHANGESET = ef3495555a4c
@@ -268,9 +270,6 @@ endif
 if SHARK_BUILD
   ICEDTEA_SHARK_BUILD = true
 endif
-
-JDK_UPDATE_VERSION = $(shell echo $(OPENJDK_VERSION) | sed -e "s/^b//")
-COMBINED_VERSION = $(JDK_UPDATE_VERSION)-$(OPENJDK_VERSION)
 
 ICEDTEA_NAME = IcedTea
 if HAS_ICEDTEA_REVISION
